--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "bootstrap": "^5.3.1",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "sass": "^1.66.1",
+    "sass-loader": "^13.3.2",
     "vue": "^3.2.13",
     "vue-router": "^4.2.4",
     "vuex": "^4.0.2"
