--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "bootstrap": "^5.3.1",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
-    "sass": "^1.66.1",
     "sass-loader": "^13.3.2",
     "vue": "^3.2.13",
     "vue-router": "^4.2.4",
@@ -24,7 +23,8 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "sass": "^1.66.1"
   },
   "eslintConfig": {
     "root": true,
